fix profiles on mobile

--- a/src/containers/profile.css
+++ b/src/containers/profile.css
@@ -40,24 +40,6 @@
     text-align: center;
 }
 
-.profile-card .profile-left a:after {
-    content: "";
-    bottom: 3px;
-    right: 3px;
-    width: 20px;
-    height: 20px;
-    border: 4px solid #FFFFFF;
-    -webkit-transform: scale(0);
-    transform: scale(0);
-    background: -webkit-linear-gradient(top, #2196F3 0%, #2196F3 50%, #FFC107 50%, #FFC107 100%);
-    background: linear-gradient(#2196F3 0%, #2196F3 50%, #FFC107 50%, #FFC107 100%);
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-    -webkit-animation: scaleIn 0.3s 3.5s ease forwards;
-    animation: scaleIn 0.3s 3.5s ease forwards;
-}
 .profile-card .profile-left >a img {
     width: 10em;
     height: 10em;
@@ -177,24 +159,28 @@
     }
 }
 @media screen and (min-height: 480px) {
+    .speakers ul {
+        margin-top: -3em;
+        margin-left: -3em;
+    }
     .profile-card {
+        flex-wrap: wrap;
 	-webkit-animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia_portrait 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
 	animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia_portrait 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
     }
     .profile-card .profile-left {
-        width: auto;
-        height: auto;
-        padding: 30px 20px;
-        display: block;
-        float: none;
-        border-right: none;
+        border-bottom: 2px dashed #EEEEEE!important;
+        border-right: transparent!important;
     }
-    .profile-card .profile-bio {
-        width: auto;
-        height: auto;
-        padding: 15px 20px 30px 20px;
-        display: block;
-        float: none;
+    .profile-card .profile-left h1 {
+        margin: 0;
+    }
+    .profile-card .profile-left h2 {
+        display: none;
+    }
+    .profile-card .profile-right {
+        padding: 0;
+        font-size: 0.5em;
     }
     .profile-social-links {
         width: 100%;
